# wiHome

./: .gitignore  LICENSE  Makefile.am  README.md  WiHome.conf  WiHome.spec.in  WirelessHome.conf  WirelessHome.html.in  WirelessHome.spec  WirelessHome.spec.in  config.h.in  configure.in  wiHome.conf  wiHome.html.in  wiHome.spec.in
libhttpd/: api.c  httpd.h  protocol.c
src/: .gitignore  Makefile.am  arphandler.c  arphandler.h  common.h  debug.c  dhcphandler.c  dhcphandler.h  dnshandler.c  dnshandler.h  functions.c  functions.h  gatewayapi.c  gatewayapi.h  gatewayhandler.c  gatewayhandler.h  gatewaymain.c  gatewaymain.h  homeauth.c  homeauth.h  homeconfig.c  homeconfig.h  homenet.c  homenet.h  httphandler.c  httphandler.h  iphandler.c  iphandler.h  ipprocessing.c  ipprocessing.h  whomestop.c
src/.libs/: .gitignore
wiHome_files/: app.css  icomera_user.js  wifi.css
