## -*-m4-*-
# $Id$

dnl Process this file with autoconf to produce a configure script.

# FILE:
#
# FUNCTION:
# implements checks for a variety of system-specific functions

AC_INIT(src/common.h)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(config)
AC_PROG_CC
AC_PROG_CXX
#AC_PROG_RANLIB

AC_SUBST(BUILDROOT)

#Versioning x.y.z tag for release
WHM_MAJOR_VERSION=1
WHM_MINOR_VERSION=0
WHM_MICRO_VERSION=0
WHM_VERSION=$WHM_MAJOR_VERSION.$WHM_MINOR_VERSION.$WHM_MICRO_VERSION

AC_SUBST(WHM_MAJOR_VERSION)
AC_SUBST(WHM_MINOR_VERSION)
AC_SUBST(WHM_MICRO_VERSION)
AC_SUBST(WHM_VERSION)
AM_INIT_AUTOMAKE(wihome,$WHM_VERSION)


AM_MAINTAINER_MODE

AC_PROG_INSTALL

AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL

AC_ISC_POSIX
AC_C_BIGENDIAN
AC_PROG_MAKE_SET
AC_HEADER_STDC


# check for pthread
AC_CHECK_HEADER(pthread.h, , AC_MSG_ERROR(You need the pthread headers) )
AC_CHECK_LIB(pthread, pthread_create, , AC_MSG_ERROR(You need the pthread library) )

# libhttpd dependencies
echo "Begining libhttpd dependencies check"
AC_CHECK_HEADERS(string.h strings.h stdarg.h unistd.h)
AC_HAVE_LIBRARY(socket)
AC_HAVE_LIBRARY(nsl)
echo "libhttpd dependencies check complete"

AC_OUTPUT( 		Makefile 
	   		wiHome.spec
			wiHome.html
			src/Makefile
			libhttpd/Makefile
			)


